Fix some issues with vh on smaller devices, and ios7.

--- a/website/app/scss/app.scss
+++ b/website/app/scss/app.scss
@@ -3,6 +3,10 @@
 @import "settings";
 @import "foundation";
 
+// As tal, or taller, than an iphone 6
+$iphone6-up: "#{$screen} and (min-device-height: #{rem-calc(667px)})";
+
+
 @mixin retina {
   @media
     only screen and (-webkit-min-device-pixel-ratio: 2),
@@ -14,7 +18,6 @@
     @content;
   }
 }
-
 
 html {
   background-color: #fafafa;  
@@ -113,11 +116,6 @@ blockquote {
   }
 }
 
-.disclaimer {
-  @extend small;
-  color: #ddd;
-}
-
 .safari-download-button {
   margin-right: 10px;
 }
@@ -137,17 +135,22 @@ $more-width-small: rem-calc(100px);
 $more-width-medium-up: rem-calc(175px);
 
 .hero-more {
-  display: block;
+  // Hide on very short displays, because
+  // we're overshooting the height of the 
+  // display anyways.
+  display: none;
+  @media #{$iphone6-up} {
+    display: flex;
+  }
+  align-items: center;
+  justify-content: center;
+
 
   background-color: rgb(3, 66, 107); //blueish
   opacity: 0.8;
   mix-blend-mode: overlay;
   
   fill: #ddd;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
   font-style: italic;
 
@@ -172,11 +175,21 @@ $more-width-medium-up: rem-calc(175px);
 }
 
 .disclaimer {
-  position: absolute;
-  bottom: ($more-width-small/2);
+  @extend small;
+  color: #ddd;
+
+  // On very short displays, this will shoot down past the
+  // height of the screen, so don't do absolute positioning.
+  padding-top: rem-calc(60px);
   padding-bottom: rem-calc(30px);
-  @media #{$medium-up} {
-    bottom: 0px;
+  
+  @media #{$iphone6-up} {
+    position: absolute;
+    bottom: ($more-width-small/2);
+    padding-top: 0;
+    @media #{$medium-up} {
+      bottom: 0px;
+    }
   }
 }
 
